aspect ratio fix for product cards on safari

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -450,6 +450,8 @@
 
 .product-card {
     @apply relative;
+    @apply flex;
+    @apply flex-col;
 }
 
 .product-card:hover {
